--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -39,23 +39,22 @@
 	background-color: transparent;
 }
 
-//=====================
+//===========================================
 //modal-Dialog (с формой)
 
-.modal[open]{
-    display: flex;
-}
 
 .modal__dialog {
     margin: auto;
     padding: 10px;
     position: relative;
+    max-width: 500px;
+    width: 100%;
 }
 
 .modal__form {
-    max-width: 500px;
+
     width: 100%;
-display: flex;
+    display: flex;
 flex-direction: column;
 gap: 20px;
 padding: 10px;
@@ -63,26 +62,30 @@ padding: 10px;
     text-align: center;
     color: $color-white;
 
-    &::after{
-        content:"";
-        position: fixed;
-        z-index: 1002;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        display: block;
+    // &::after{
+    //     content:"";
+    //     position: fixed;
+    //     z-index: 1002;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     overflow: auto;
+    //     display: block;
 
-        background: rgba(51, 51, 51, 0.9);
+    //     background: rgba(51, 51, 51, 0.9) url("../some.gif") no-repeat center center;
 
-       opacity: 0;
-       visibility: hidden;
-    }
+    //     opacity: 0;
+    //     visibility: hidden;
+    //     translate: .3s;
+    // }
 
-    &._sending::after{
-        opacity: 1;
-        visibility: visible;
+    // &.sending::after{
+    //     opacity: 1;
+    //     visibility: visible;
+    // }
+    &.sending .loader {
+       display: block;
     }
 
     &__lbl{
@@ -97,9 +100,21 @@ padding: 10px;
         }
     }
 
+    &__buttons{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+    }
+
+
     &__input {
         padding: 5px;
         height: 30px;
+
+        &_textarea{
+            min-height: 100px;
+            resize: vertical;
+        }
 
         border: none;
         border-radius: 5px;
@@ -122,12 +137,33 @@ padding: 10px;
 
 }
 
+
+
+.modal__title{
+    color: #fff;
+font-size: clamp(1.438rem, 0.949rem + 2.24vw, 2.625rem);
+    }
+
+.file-preview {
+    margin-top: 10px;
+    display: none; /* Скрываем по умолчанию */
+
+    & img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%; /* Делаем круглую миниатюру */
+        object-fit: cover; /* Обрезаем изображение */
+        cursor: pointer; /* Курсор в виде указателя */
+    }
+}
+
 .present {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     gap: 10px;
 }
+
 .present__lbl {
     display: flex;
     flex-direction: row-reverse;
@@ -176,3 +212,11 @@ padding: 10px;
       }
 }
 
+/* ============================= */
+/* Media */
+
+@media (max-width: 410px) {
+    .modal__form__buttons{
+        grid-template-columns: 1fr;
+    }
+}
