--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -62,32 +62,6 @@ padding: 10px;
     text-align: center;
     color: $color-white;
 
-    // &::after{
-    //     content:"";
-    //     position: fixed;
-    //     z-index: 1002;
-    //     top: 0;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 100%;
-    //     overflow: auto;
-    //     display: block;
-
-    //     background: rgba(51, 51, 51, 0.9) url("../some.gif") no-repeat center center;
-
-    //     opacity: 0;
-    //     visibility: hidden;
-    //     translate: .3s;
-    // }
-
-    // &.sending::after{
-    //     opacity: 1;
-    //     visibility: visible;
-    // }
-    &.sending .loader {
-       display: block;
-    }
-
     &__lbl{
         display: flex;
         flex-direction: column;
@@ -214,6 +188,12 @@ font-size: clamp(1.438rem, 0.949rem + 2.24vw, 2.625rem);
 
 /* ============================= */
 /* Media */
+
+@media (max-width: 585px) {
+    .modal__dialog {
+               padding-top: 55px;
+    }
+}
 
 @media (max-width: 410px) {
     .modal__form__buttons{
