--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,7 @@ body {
   font-weight: 400;
   color: #332a33;
   line-height: 1.4;
+  background-color: #f3f0fb;
 }
 
 h1,
@@ -83,7 +84,7 @@ h6 {
   font-weight: 400;
   font-size: 42px;
   text-transform: uppercase;
-  color: rgb(58, 1, 54);
+  color: #3a0136;
 }
 
 a {
@@ -204,9 +205,15 @@ textarea {
 }
 .page__inner {
   overflow: hidden;
-  background-color: rgba(142, 106, 214, 0.3);
-  grid-template-rows: minmax(0, 1fr) auto;
-  min-height: 100vh;
+  background-color: #ddd2f4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: var(--element-height);
 }
 
 .container {
@@ -222,6 +229,9 @@ textarea {
 }
 
 .main {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -371,7 +381,7 @@ textarea {
 }
 .btn-link_dark {
   color: #fff;
-  background-color: rgb(58, 1, 54);
+  background-color: #3a0136;
   padding: 15px 30px;
   font-size: 16px;
   text-transform: uppercase;
@@ -380,14 +390,14 @@ textarea {
 }
 .btn-link_dark:hover, .btn-link_dark:focus {
   background-color: #fff;
-  color: rgb(58, 1, 54);
+  color: #3a0136;
 }
 .btn-link_pink-hover-light, .btn-link_pink-hover-dark {
   background-color: #e04eb3;
   border-radius: 5px;
   padding: 15px 30px;
   text-transform: uppercase;
-  color: rgb(58, 1, 54);
+  color: #3a0136;
   display: inline-block;
   text-align: center;
 }
@@ -395,7 +405,7 @@ textarea {
   background-color: #fff;
 }
 .btn-link_pink-hover-dark:hover, .btn-link_pink-hover-dark:focus {
-  background-color: rgb(58, 1, 54);
+  background-color: #3a0136;
   color: #fff;
 }
 
@@ -638,7 +648,7 @@ textarea {
 .intro__content {
   min-height: 622px;
   padding: 75px 100px;
-  background-color: rgb(58, 1, 54);
+  background-color: #3a0136;
   color: #fff;
   overflow: hidden;
 }
@@ -1141,6 +1151,7 @@ textarea {
   padding: 20px;
   text-align: center;
   position: relative;
+  width: 100%;
 }
 .review__text::after {
   content: "";
@@ -1670,4 +1681,20 @@ textarea {
   .modal__form__buttons {
     grid-template-columns: 1fr;
   }
+}
+.privacy-policy__article {
+  margin-bottom: 40px;
+}
+.privacy-policy .title {
+  font-size: 25px;
+}
+.privacy-policy .main-point {
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+.privacy-policy .sub-point {
+  margin-left: 20px;
+  font-size: 16px;
+  margin-bottom: 10px;
 }/*# sourceMappingURL=main.css.map */
