--- a/sass/_reviews.scss
+++ b/sass/_reviews.scss
@@ -62,13 +62,14 @@ padding: 10px 0 30px;
 	padding: 20px;
 	text-align: center;
 	position: relative;
+	width: 100%;
 
 	&::after {
 		content: "";
 		display: block;
 		position: absolute;
 		width: 30px;
-		height: 30px;
+ 		height: 30px;
 		top: -12px;
 		left: 50%;
 		background-color: inherit;
