--- a/sass/_var.scss
+++ b/sass/_var.scss
@@ -5,8 +5,8 @@ $color-grey:#f2f2f2;
 $color-black: #000;
 $color-lightgrey: #f3f0fb;//#fafafa;
 $color-darkgrey: rgb(158, 146, 158);
-$color-purple:  rgb(58, 1, 54);;
+$color-purple:  #3a0136;;
 
-// $header-height: 0px; 
+$color-bg1:#ddd2f4;
 
 
